rtest/tests/jsr335/Semantics/InterfaceMethods/InheritanceOverriding/ShouldFail/syntax07/Test.java
// .result=COMPILE_FAIL
public class Test {
	interface A {
		default void m(int i) { }
	}
	
	interface B {
		void m(int i) { }
	}
	
	interface C extends A, B { }
}